--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,8 @@
 		<div id="root" style="height: 100%; width: 100%;">
 		  <Index></Index>
 		</div>
-		<div id="footarea">
+		<!--<div id="footarea">
 		  <footerarea></footerarea>
-		</div>
+		</div>-->
 	</body>
 </html>
