--- a/dev/index.html
+++ b/dev/index.html
@@ -10,5 +10,5 @@
 		   <router-view></router-view>
 		</div>
 		<script src="../dev/lib/axios.min.js"></script>
-	</body>
+	<script type="text/javascript" src="scripts/app@ee8dc6e2d0af563b0d6c.js"></script></body>
 </html>
